--- a/index.html
+++ b/index.html
@@ -1,110 +1,124 @@
-<!doctype html>
+<!DOCTYPE html>
  <html lang="eng">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>GoIT-HW-02-v2-KPasco</title>
+        <title>GoIT-HW-03a-KPasco</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet" href="../goit-markup-hw-02-v2/css/styles.css" />
+        <link rel="stylesheet" href="../goit-markup-hw-03a/css/styles.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+            integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <!--HEADER-->
-        <header class="header">
-            <nav class="header-nav">
-                <div class="header-logo">
-                    <h3><a href="#" class="webstudio-link-a">WEB<span class="webstudio-link-b">STUDIO</span></a></h3>
+        <header class="top-header header">
+            <div class="header-logo">
+                <a href="#" class="webstudio link"> 
+                    <span class="webstudio-web">WEB</span>
+                    <span class="webstudio-studio">STUDIO</span>
+                </a>
+                <nav class="header-nav">
                     <ul class="header-list">
-                        <li class="header-list-item"><a class="header-link link" href="index.html" target="_blank">Studio</a>
+                        <li>
+                            <a class="link header-link active" href="index.html" target="_blank">Studio</a>
                         </li>
-                        <li class="header-list-item"><a class="header-link link" href="portfolio.html"
-                                target="_blank">Portfolio</a></li>
-                        <li class="header-list-item"><a class="header-link link" href="contacts.html"
-                                target="_blank">Contacts</a></li>
+                        <li>
+                            <a class="link header-link" href="portfolio.html" target="_blank">Portfolio</a>
+                        </li>
+                        <li>
+                            <a class="link header-link" href="contacts.html" target="_blank">Contacts</a>
+                        </li>
                     </ul>
-                </div>
-            </nav>
+                </nav>
+            </div>
+           
             <!--CONTACT INFO-->
             <ul class="contact-info">
-                <li class="header-list-item"><a class="header-contacts" href="mailto:info@devstusio.com">info@devstusio.com</a>
+                <li>
+                    <a class="link contact-info" href="mailto:info@devstusio.com">info@devstusio.com</a>
                 </li>
-                <li class="header-list-item"><a class="header-contacts" href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+                <li>
+                    <a class="link contact-info" href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </header>
         <!--END OF HEADER-->
 
         <!--MAIN SECTION-->
-        <main class="main">
-            <div class="main-top">
-                <h1>Effective Solutions for Your Business</h1>
+        <main>
+            <section class="main top bg">
+                <h1 class="main-top-text">Effective Solutions <br />for Your Business</h1>
                 <button class="order-service-btn" type="button">Order Service</button>
-            </div>
+            </section>
 
-            <div class="main-feature">
-                <ul>
+            <section class="main feature">
+                <ul class="service">
                     <li>
                         <h3>Strategy</h3>
-                        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                        <p class="service-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li>
                         <h3>Punctuality</h3>
-                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        <p class="service-desc">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li>
                         <h3>Diligence</h3>
-                        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        <p class="service-desc">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li>
                         <h3>Technologies</h3>
-                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        <p class="service-desc">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
                 </ul>
-            </div>
+            </section>
 
-            <div class="main-service">
-                <h2>What are we doing</h2>
-                <ul>
+            <section class="main-service">
+                <h2 class="section-title">What Are We Doing</h2>
+                <ul class="service">
                     <li><img src="../goit-markup-hw-01/images/what are we doing/img1.jpg" alt="img1-desktop" width="360" height="300"></li>
                     <li><img src="../goit-markup-hw-01/images/what are we doing/img2.jpg" alt="img2-mobile" width="360" height="300"></li>
                     <li><img src="../goit-markup-hw-01/images/what are we doing/img3.jpg" alt="img3-dektop-mobile" width="360" height="300"></li>
                 </ul>
-            </div>
+            </section>
 
-        <div class="main-team">
-            <h2>Our Team</h2>
-            <div class="team-inline">
-                <ul>
+        <section class="main-team">
+            <h2 class="section-title">Our Team</h2>
+                <ul class="service">
                     <li>
                         <img src="../goit-markup-hw-01/images/team/img-mg.jpg" alt="mark-guerrero" width="264" height="260">
-                        <h3>Mark Guerrero</h3>
+                        <h3 class="team-name">Mark Guerrero</h3>
                         <p>Product Manager</p>
                     </li>
                     <li>
                         <img src="../goit-markup-hw-01/images/team/img-tf.jpg" alt="tom-ford" width="264" height="260">
-                        <h3>Tom Ford</h3>
+                        <h3  class="team-name">Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
                         <img src="../goit-markup-hw-01/images/team/img-cg.jpg" alt="camilla-garcia" width="264" height="260">
-                        <h3>Camilla Garcia</h3>
+                        <h3  class="team-name">Camilla Garcia</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
                         <img src="../goit-markup-hw-01/images/team/img-dw.jpg" alt="daniel-wilson" width="264" height="260">
-                        <h3>Daniel Wilson</h3>
+                        <h3  class="team-name">Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
                 </ul>
-            </div>
-        </div>
+        </section>
         </main>
         
-        <div class="footer">
-            <h3><a href="#" class="webstudio-link-a">WEB<span class="webstudio-link-bottom">STUDIO</span></a></h3>
+        <footer class="footer-bg">
+            <a href="#" class="webstudio link">
+                <span class="webstudio-web">WEB</span>
+                <span class="webstudio-studio-footer">STUDIO</span>
+            </a>
             <p>Increase the flow of customers and <br />sales for your business with digital<br /> marketing & growth solutions.</p>
-        </div>
+        </footer>
     </body>
  </html>   
+
