--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GoIT-HW-02-v2-KPasco</title>
+    <title>GoIT-HW-03a-KPasco</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../goit-markup-hw-02-v2/css/styles.css" />
+    <link rel="stylesheet" href="../goit-markup-hw-03a/css/styles.css" />
 
 </head>
 <body>
@@ -20,13 +20,14 @@
                     <li class="header-list-item"><a class="header-link link" href="portfolio.html" target="_blank">Portfolio</a></li>
                     <li class="header-list-item"><a class="header-link link" href="contacts.html" target="_blank">Contacts</a></li>
                 </ul>
+           
+                <!--CONTACT INFO-->
+                <ul class="contact-info">
+                    <li class="header-list-item"><a class="header-contacts" href="mailto:info@devstusio.com">info@devstusio.com</a></li>
+                    <li class="header-list-item"><a class="header-contacts" href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+                </ul>
             </div>
         </nav>
-        <!--CONTACT INFO-->
-        <ul class="contact-info">
-            <li class="header-list-item"><a class="header-contacts" href="mailto:info@devstusio.com">info@devstusio.com</a></li>
-            <li class="header-list-item"><a class="header-contacts" href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
-        </ul>
     </header>
     <!--END OF HEADER-->
 
